--- a/tylerstanton_1.ipynb
+++ b/tylerstanton_1.ipynb
@@ -11,23 +11,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\Users\\Mikayla Rietgraf\\AppData\\Local\\Microsoft\\WindowsApps\\python3.11.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '\"c:/Users/Mikayla Rietgraf/AppData/Local/Microsoft/WindowsApps/python3.11.exe\" -m pip install ipykernel -U --user --force-reinstall'"
-     ]
+     "data": {
+      "text/plain": [
+       "0    HAMMER\n",
+       "1       SAW\n",
+       "2    WRENCH\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "grades = pd.Series([87, 100, 94])\n",
     "grades\n",
     "pd.Series(98.6, range(3))\n",
@@ -37,8 +47,23 @@
     "grades.min()\n",
     "grades.max()\n",
     "grades.std()\n",
-    "grades.describe()\n",
-    "\n",
+    "grades.describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "grades = pd.Series([87, 100, 94], index=['Wally', 'Eva', 'Sam'])\n",
     "grades\n",
     "grades = pd.Series({'Wally':87, 'Eva':100, 'Sam':94})\n",
@@ -46,14 +71,19 @@
     "grades['Eva']\n",
     "grades.Wally\n",
     "grades.dtype\n",
-    "grades.values\n",
-    "\n",
+    "grades.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hardware = pd.Series(['Hammer', 'Saw', 'Wrench'])\n",
     "hardware\n",
     "hardware.str.contains('a')\n",
-    "hardware.str.upper()\n",
-    "\n",
-    "\n"
+    "hardware.str.upper()"
    ]
   }
  ],
@@ -64,7 +94,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
   },
   "orig_nbformat": 4
