--- a/tylerstanton_1.ipynb
+++ b/tylerstanton_1.ipynb
@@ -11,32 +11,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    HAMMER\n",
-       "1       SAW\n",
-       "2    WRENCH\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Task 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      3.000000\n",
+       "mean      93.666667\n",
+       "std        6.506407\n",
+       "min       87.000000\n",
+       "25%       90.500000\n",
+       "50%       94.000000\n",
+       "75%       97.000000\n",
+       "max      100.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grades = pd.Series([87, 100, 94])\n",
     "grades\n",
@@ -60,9 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 87, 100,  94], dtype=int64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grades = pd.Series([87, 100, 94], index=['Wally', 'Eva', 'Sam'])\n",
     "grades\n",
@@ -76,9 +100,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    HAMMER\n",
+       "1       SAW\n",
+       "2    WRENCH\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hardware = pd.Series(['Hammer', 'Saw', 'Wrench'])\n",
     "hardware\n",
