--- a/tylerstanton_2.ipynb
+++ b/tylerstanton_2.ipynb
@@ -4,43 +4,234 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Creator: Tyler Stanton - Task 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'iloc1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7432\\1859717894.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mgrades\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrades_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Test1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Test2'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Test3'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mgrades\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Eva'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mgrades\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSam\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mgrades\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Test1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mgrades\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mgrades\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Test1'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'Test3'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mgrades\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mgrades\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Test1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Test2'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Mikayla Rietgraf\\datafun-04-notebooks\\datafun-04-notebooks\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5985\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5986\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5987\u001b[0m         ):\n\u001b[0;32m   5988\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5989\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'iloc1'"
-     ]
+     "data": {
+      "text/plain": [
+       "Test1    94\n",
+       "Test2    77\n",
+       "Test3    90\n",
+       "Name: Sam, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Tyler Stanton Task 2\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
     "grades_dict = {'Wally': [87, 96, 70], 'Eva': [100, 87, 90], 'Sam': [94, 77, 90], 'Katie': [100, 81, 82], 'Bob':[83, 65, 85]}\n",
     "grades = pd.DataFrame(grades_dict, index = ['Test1', 'Test2', 'Test3'])\n",
     "grades['Eva']\n",
-    "grades.Sam\n",
+    "grades.Sam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wally</th>\n",
+       "      <th>Eva</th>\n",
+       "      <th>Sam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Test1</th>\n",
+       "      <td>87</td>\n",
+       "      <td>100</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Test3</th>\n",
+       "      <td>70</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Wally  Eva  Sam\n",
+       "Test1     87  100   94\n",
+       "Test3     70   90   90"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "grades.loc['Test1']\n",
-    "grades.iloc1[1]\n",
     "grades.loc['Test1':'Test3']\n",
     "grades.iloc[0:2]\n",
     "grades.loc[['Test1', 'Test2']]\n",
     "grades.iloc[[0, 2]]\n",
     "grades.loc['Test1':'Test2', ['Eva', 'Katie']]\n",
-    "grades.iloc[[0, 2], 0:3]\n",
+    "grades.iloc[[0, 2], 0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wally</th>\n",
+       "      <th>Eva</th>\n",
+       "      <th>Sam</th>\n",
+       "      <th>Katie</th>\n",
+       "      <th>Bob</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>84.33</td>\n",
+       "      <td>96.67</td>\n",
+       "      <td>90.33</td>\n",
+       "      <td>87.67</td>\n",
+       "      <td>77.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>13.20</td>\n",
+       "      <td>5.77</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>10.69</td>\n",
+       "      <td>11.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>70.00</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>87.00</td>\n",
+       "      <td>81.00</td>\n",
+       "      <td>65.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>78.50</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>88.50</td>\n",
+       "      <td>81.50</td>\n",
+       "      <td>74.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>87.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>82.00</td>\n",
+       "      <td>83.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>91.50</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>92.00</td>\n",
+       "      <td>91.00</td>\n",
+       "      <td>84.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>96.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>94.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>85.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Wally     Eva    Sam   Katie    Bob\n",
+       "count   3.00    3.00   3.00    3.00   3.00\n",
+       "mean   84.33   96.67  90.33   87.67  77.67\n",
+       "std    13.20    5.77   3.51   10.69  11.02\n",
+       "min    70.00   90.00  87.00   81.00  65.00\n",
+       "25%    78.50   95.00  88.50   81.50  74.00\n",
+       "50%    87.00  100.00  90.00   82.00  83.00\n",
+       "75%    91.50  100.00  92.00   91.00  84.00\n",
+       "max    96.00  100.00  94.00  100.00  85.00"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "grades[grades >= 90]\n",
     "grades[(grades >= 80) & (grades < 90)]\n",
     "grades.at['Test2', 'Eva']\n",
@@ -49,17 +240,7 @@
     "grades.at['Test2', 'Eva']\n",
     "grades.iat[1, 2] = 87\n",
     "grades.iat[1, 2]\n",
-    "grades.describe()\n",
-    "pd.set_option('precosion', 2)\n",
-    "grades.describe()\n",
-    "grades.mean()\n",
-    "grades.T\n",
-    "grades.T.describe()\n",
-    "grades.T.mean()\n",
-    "grades.sort_index(ascending=False)\n",
-    "grades.sort_index(axis=1)\n",
-    "grades.sort_values(by='Test1', ascending=False)\n",
-    "grades.loc['Test1'].sort_values(ascending=False)\n"
+    "grades.describe()"
    ]
   }
  ],
