--- a/xtra_p4.ipynb
+++ b/xtra_p4.ipynb
@@ -1,20 +1,83 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Creator: Tyler Stanton - \n",
+    "Optional Task 5 (Bonus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Phone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mike Green</td>\n",
+       "      <td>demo1@deitel.com</td>\n",
+       "      <td>555-555-5555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sue Brown</td>\n",
+       "      <td>demo2@deitel.com</td>\n",
+       "      <td>555-555-1234</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Name             Email         Phone\n",
+       "0  Mike Green  demo1@deitel.com  555-555-5555\n",
+       "1   Sue Brown  demo2@deitel.com  555-555-1234"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
     "\n",
     "contacts = [['Mike Green', 'demo1@deitel.com', '5555555555'], ['Sue Brown', 'demo2@deitel.com', '5555551234']]\n",
-    "contactsdf = pd.Dataframe(contacts, columns=['Name', 'Email', 'Phone'])\n",
+    "contactsdf = pd.DataFrame(contacts, columns=['Name', 'Email', 'Phone'])\n",
     "\n",
     "def get_formatted_phone(value):\n",
     "    result = re.fullmatch(r'(\\d{3})(\\d{3})(\\d{4})', value)\n",
-    "    return '-'.join(result.gourpa()) if result else value\n",
+    "    return '-'.join(result.groups()) if result else value\n",
     "\n",
     "formatted_phone = contactsdf['Phone'].map(get_formatted_phone)\n",
     "formatted_phone\n",
@@ -24,8 +87,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
